# dreamerZ-claude

./: .gitconfig  .gitignore  README.md  backend_test.py  clean_db.bat  design_guidelines.json  docker-compose.yml  inspect_current_mongosh_path.ps1  inspect_user_path_registry.ps1  pyproject.toml  render.yaml  restart_all.bat  send_test_email.py  start_dev.bat
.emergent/: emergent.yml  summary.txt
.github/workflows/: ci.yml  render-deploy.yml
backend/: .env.example  alembic.ini  config.py  curriculum_data.json  database.py  main.py  requirements-dev.txt  requirements.txt  server.py  server_LEGACY_DO_NOT_USE.py  site_config_seed.json
backend/middleware/: logging_mw.py  rate_limit.py  security.py
backend/migrations/: env.py
backend/models/: __init__.py  content.py  enrollment.py  progress.py  sql_models.py  user.py
backend/routes/: __init__.py  admin.py  ai.py  assessments.py  auth.py  content.py  course_generation.py  enrollment.py  parent.py  progress.py  site.py  status.py
backend/scripts/: add_media_columns.py  cleanup_orphan_media.py  migrate_timestamps_to_tzaware.py  seed_local.py
backend/services/: ai_service.py  assessment_service.py  auth_service.py  course_generator.py  document_parser.py  email_service.py  enrollment_service.py  media_service.py  parent_service.py  progress_service.py  translation_service.py
frontend/: .env.example  .eslintrc.json  .gitignore  Dockerfile  craco.config.js  package.json
memory/: PRD.md
scripts/: translate_all_to_bengali.py
test_reports/: iteration_1.json  iteration_2.json  iteration_3.json  iteration_4.json
(+84 files in other folders)
